got useState functioning z-index on clickArea was preventing onClick functionality

--- a/client/src/components/ClickArea/ClickArea.css
+++ b/client/src/components/ClickArea/ClickArea.css
@@ -2,10 +2,10 @@
     background-image: url(./Backgrounds/trees.jpg);
     width: 85%;
     height: 100vh;
-    z-index: -1;
     display: flex;
     justify-content: center;
 }
+
 
 /* .background {
     width: 100%;
